<resources>
    <string name="app_name">Insapp</string>

    <string name="positive_button">Oui</string>
    <string name="negative_button">Non</string>
    <string name="publish_button">Publier</string>
    <string name="cancel_button">Annuler</string>
    <string name="close_button">Fermer</string>

    <string name="participate_yes">J\'y vais</string>
    <string name="participate_maybe">Peut-être</string>
    <string name="participate_no">J\'y vais pas</string>

    <string name="x_attendee">%1$d participant</string>
    <string name="x_attendees">%1$d participants</string>
    <string name="no_attendees_no_interested">Pas de participants</string>
    <string name="no_attendees_one_interested">Pas de participants, 1 intéressé</string>
    <string name="no_attendees_x_interested">Pas de participants, %1$d intéressés</string>
    <string name="one_attendee_no_interested">1 participant</string>
    <string name="one_attendee_one_interested">1 participant, 1 intéressé</string>
    <string name="one_attendee_x_interested">1 participant, %1$d intéressés</string>
    <string name="x_attendees_no_interested">%1$d participants</string>
    <string name="x_attendees_one_interested">%1$d participants, 1 intéressé</string>
    <string name="x_attendees_x_interested">%1$d participants, %2$d intéressés</string>

    <string name="intro_profile">Porte haut les couleurs de ton départ\' en éditant ton profil</string>
    <string name="intro_posts">Suis l\'actualité de tes associations préférées grâce à la page des News</string>
    <string name="intro_notifications">Reçois les notifications pour ne jamais rien louper</string>
    <string name="intro_events">Reste au courant des derniers évènements des associations</string>
    <string name="intro_clubs">Retrouve toutes les associations de l\'INSA de Rennes</string>

    <string name="settings_profile">Profil</string>
    <string name="settings_amicaliste">Amicaliste</string>
    <string name="settings_options">Options</string>
    <string name="settings_name">Nom</string>
    <string name="settings_name_summary">Non renseigné</string>
    <string name="settings_class">Promotion</string>
    <string name="settings_class_summary">Renseigne ta promotion afin d\'obtenir l\'avatar associé</string>
    <string name="settings_gender">Genre</string>
    <string name="settings_gender_summary">Inconnu</string>
    <string name="settings_mail">Email</string>
    <string name="settings_mail_summary">Non renseigné</string>
    <string name="settings_description">Description</string>
    <string name="settings_description_summary">Non renseignée</string>
    <string name="settings_notifications">Activer les notifications</string>
    <string name="settings_notifications_summary">Une notification est envoyée lorsqu\'une association ajoute une news ou un évènement</string>
    <string name="settings_calendar">Ajouter les évènements au calendrier</string>
    <string name="settings_calendar_summary">Les évènements auxquels vous participez sont ajoutés au calendrier</string>
    <string name="settings_barcode_add">Carte amicaliste</string>
    <string name="settings_barcode_disclaimer">Non ajoutée</string>
    <string name="settings_barcode_input">Saisie manuelle</string>
    <string name="settings_barcode_input_summary">Saisissez les chiffres figurant sous le code barre de votre carte amicaliste</string>
    <string name="settings_barcode_camera">Caméra</string>
    <string name="settings_barcode_camera_summary">Scannez le code barre de votre carte amicaliste à l\'aide de la caméra</string>
    <string name="barcode_scan">Scannez le code barre</string>
    <string name="barcode_success">Code barre validé</string>
    <string name="barcode">Ma carte amicaliste</string>

    <string name="report">Signaler</string>
    <string name="delete_account">Supprimer mon compte</string>

    <string name="report_user_action">Signaler un utilisateur</string>
    <string name="report_user_are_you_sure">Voulez-vous vraiment signaler cet utilisateur ?</string>
    <string name="report_user_success">Utilisateur signalé avec succès</string>

    <string name="write_comment_action">Écrire un commentaire</string>
    <string name="write_comment_success">Commentaire envoyé</string>

    <string name="report_comment_action">Signaler un commentaire</string>
    <string name="report_comment_are_you_sure">Voulez-vous signaler ce commentaire ?</string>
    <string name="report_comment_success">Commentaire signalé avec succès</string>

    <string name="delete_comment_action">Supprimer mon commentaire</string>
    <string name="delete_comment_are_you_sure">Voulez-vous supprimer votre commentaire ?</string>
    <string name="delete_comment_success">Commentaire supprimé avec succès</string>

    <string name="delete_account_action">Supprimer mon compte</string>
    <string name="delete_account_are_you_sure">Voulez-vous vraiment supprimer votre compte ?</string>
    <string name="delete_account_success">Compte supprimé avec succès</string>

    <string name="posts">Actualités</string>
    <string name="events">Évènements</string>
    <string name="clubs">Associations</string>
    <string name="menu">Menu</string>
    <string name="users">Utilisateurs</string>
    <string name="notifications">Notifications</string>
    <string name="about">À propos</string>
    <string name="comments">Commentaires</string>
    <string name="x_comments">Commentaires (%1$d)</string>

    <string name="events_now">En ce moment</string>
    <string name="events_future">À venir</string>
    <string name="events_past">Passés</string>
    <string name="events_today">Aujourd\'hui</string>
    <string name="events_week">Cette semaine</string>
    <string name="events_next_week">La semaine prochaine</string>
    <string name="events_later">Plus tard</string>
    <string name="event_nothing_1">Mais que font les associations ?</string>
    <string name="event_nothing_2">Il n\'y a pas d\'event planifié dans les prochains jours.</string>

    <string name="event_date_inf">%1$s de %2$s à %3$s</string>
    <string name="event_date_sup_start_end">%1$s à %2$s</string>
    <string name="event_date_sup">Du %1$s au %2$s</string>

    <string name="ago">il y a</string>
    <string name="ago_week">sem.</string>
    <string name="ago_day">j.</string>
    <string name="ago_hour">h.</string>
    <string name="ago_minute">min.</string>
    <string name="ago_now">à l\'instant</string>
    <string name="tag">\@%1$s</string>

    <string name="event_attendees">Participants</string>

    <string name="add_to_calendar_action">Ajout au calendrier</string>
    <string name="add_to_calendar_are_you_sure">Voulez-vous ajouter cet évènement à votre calendrier ?</string>

    <string name="how_to_post">Comment publier ?</string>
    <string name="legal_conditions">Mentions légales</string>
    <string name="credits">Crédits</string>

    <string name="login">Authentification</string>

    <string name="post">Post</string>

    <string name="search_action">Rechercher</string>
    <string name="search_results">Résultats</string>
    <string name="search_no_results">Aucun résultat</string>

    <string name="settings">Paramètres</string>
    <string name="protected_apps_button">Applications protégées</string>
    <string name="protected_apps_dialog_title">Applications protégées Huawei</string>
    <string name="protected_apps_dialog_message">%s doit être autorisée dans les Applications protégées du téléphone pour fonctionner correctement.</string>
    <string name="protected_apps_skip">Ne plus afficher ce message</string>

    <string name="profile">Profil</string>

    <string name="can_not_join_server">Impossible de joindre le serveur d\'Insapp.</string>
    <string name="check_internet_connection">Veuillez vérifier votre connexion internet.</string>
    <string name="connectivity_issue">Erreur de connexion</string>

    <string name="shortcut_notification">Notifications</string>
    <string name="shortcut_notification_long">Notifications</string>
    <string name="shortcut_notification_disabled">Raccourci désactivé</string>

    <string name="shortcut_events">Évènements</string>
    <string name="shortcut_events_long">Évènements</string>
    <string name="shortcut_events_disabled">Raccourci désactivé</string>

    <string name="shortcut_profil">Profil</string>
    <string name="shortcut_profil_long">Profil</string>
    <string name="shortcut_profil_disabled">Raccourci désactivé</string>

    <string name="notification_posts_name">Actualités</string>
    <string name="notification_posts_description">Une notification est envoyée lorsqu\'une association ajoute une actualité</string>
    <string name="notification_events_name">Évènements</string>
    <string name="notification_events_description">Une notification est envoyée lorsqu\'une association ajoute un évènement</string>
    <string name="notification_system_name">Paramètres système</string>
    <string name="notification_system_description">Accéder à vos paramètres système pour plus de contrôle (vibrations, badges&#8230;)</string>
</resources>
