<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/settings_profile">

        <android.support.v7.preference.EditTextPreference
            android:key="name"
            android:title="@string/settings_name"
            android:summary="@string/settings_name_summary"
            android:dialogLayout="@layout/pref_dialog_edittext_fix" />

        <android.support.v7.preference.ListPreference
            android:key="sex"
            android:title="@string/settings_sex"
            android:summary="@string/settings_sex_summary"
            android:defaultValue="unknown"
            android:entries="@array/listArraySex"
            android:entryValues="@array/listValuesSex" />

        <android.support.v7.preference.ListPreference
            android:key="class"
            android:title="@string/settings_class"
            android:summary="@string/settings_class_summary"
            android:defaultValue="unknown"
            android:entries="@array/listArrayClass"
            android:entryValues="@array/listValuesClass" />

        <android.support.v7.preference.EditTextPreference
            android:key="email"
            android:title="@string/settings_mail"
            android:summary="@string/settings_mail_summary"
            android:dialogLayout="@layout/pref_dialog_edittext_fix" />

        <android.support.v7.preference.EditTextPreference
            android:key="description"
            android:title="@string/settings_description"
            android:summary="@string/settings_description_summary"
            android:dialogLayout="@layout/pref_dialog_edittext_fix" />
    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/settings_amicaliste">

        <android.support.v7.preference.PreferenceScreen
            android:key="barcode_preferences"
            android:title="@string/settings_barcode_add"
            android:summary="@string/settings_barcode_disclaimer"
            android:persistent="false">

            <android.support.v7.preference.EditTextPreference
                android:key="barcode_dialog"
                android:title="@string/settings_barcode_input"
                android:summary="@string/settings_barcode_input_summary"
                android:dialogLayout="@layout/pref_dialog_edittext_fix" />

            <android.support.v7.preference.PreferenceScreen
                android:key="barcode_camera"
                android:title="@string/settings_barcode_camera"
                android:summary="@string/settings_barcode_camera_summary">
            </android.support.v7.preference.PreferenceScreen>

        </android.support.v7.preference.PreferenceScreen>

    </android.support.v7.preference.PreferenceCategory>

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/settings_options">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="notifications"
            android:title="@string/settings_notifications"
            android:summary="@string/settings_notifications_summary"
            android:defaultValue="true" />

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="calendar"
            android:title="@string/settings_calendar"
            android:summary="@string/settings_calendar_summary"
            android:defaultValue="false" />
    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>