<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:paddingBottom="80dp">

    <TextView
        android:text="@string/events"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:gravity="center"
        android:paddingLeft="32dp"
        android:paddingRight="32dp"
        android:textColor="@android:color/white"
        android:textSize="28sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:src="@drawable/intro_events"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:layout_weight="0.9"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:text="@string/intro_events"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:gravity="center|bottom"
                android:layout_weight="0.6"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <CheckBox
                android:text="@string/settings_calendar"
                android:id="@+id/checkbox_enable_calendar"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:buttonTint="@android:color/white"
                android:layout_weight="0.4" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>